--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -352,6 +352,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="heading_5">Başlık 5</string>
     <string name="bold">Kalın</string>
     <string name="italic">İtalik</string>
+    <string name="highlighted">Vurgulanmış</string>
     <string name="strikeout">Üstü çizili</string>
     <string name="inline_code">Satır içi kod</string>
     <string name="horizontal_line">Yatay çizgi</string>
@@ -372,6 +373,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="toggle_action_visibility">Eylem görünürlüğünü değiştir</string>
     <string name="load_default_settings">Varsayılan ayarları yükle</string>
     <string name="drag">Sürükle</string>
+    <string name="created">Oluşturuldu</string>
     <string name="file_encryption_password">Dosya şifreleme parolası</string>
     <string name="no_password_set_cannot_encrypt_decrypt">Parola ayarlanmadı, şifrelenemiyor veya şifre çözülemiyor.\nParola ayarlamak için Ayarlar -&gt; Genel -&gt; Parola menüsüne gidin.</string>
     <string name="encrypt_file_content">Dosya içeriğini şifrele</string>
@@ -384,6 +386,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_description_format">Dosya açıklama biçimi</string>
     <string name="file_description_format_dialog">Dosya tarayıcısında her dosyanın altındaki açıklamanın biçimi. Dosya boyutunu göstermek için FS\'nin eklenmesiyle Android\'in SimpleDateFormat kurallarına uyar. Yerel ayarınız için varsayılan biçimi kullanmak için boş bırakın.\n\nÖrnek giriş:\nFS yyyy MMM dd hh:mm:ss aa\nçıktı biçimi:\n30KB 2020 Mar 20 11:24:52 PM</string>
     <string name="loading_default_value">Varsayılan değer yükleniyor</string>
+    <string name="file_settings">Dosya ayarları</string>
     <string name="search_and_replace">Ara / Değiştir</string>
     <string name="search_for">Bunun için ara</string>
     <string name="replace_with">Şununla değiştir</string>
