--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -35,7 +35,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="select_folder">選擇資料夾</string>
     <string name="edit">編輯</string>
     <string name="search_documents">搜尋文件</string>
-    <string name="share_to_arrow">分享到…</string>
+    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">分享到…</string>
     <string name="share">分享</string>
     <string name="search">搜尋</string>
     <string name="display_converted_markup">要求</string>
